# api/kratosblog/server/v1/article_grpc.pb.go
@@ -1,0 +1,183 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.3.0
+// - protoc             v3.21.12
+// source: api/kratosblog/server/v1/article.proto
+
+package v1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.32.0 or later.
+const _ = grpc.SupportPackageIsVersion7
+
+const (
+	Article_CategoryList_FullMethodName = "/api.kratosblog.server.v1.Article/CategoryList"
+	Article_TagList_FullMethodName      = "/api.kratosblog.server.v1.Article/TagList"
+	Article_List_FullMethodName         = "/api.kratosblog.server.v1.Article/List"
+)
+
+// ArticleClient is the client API for Article service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type ArticleClient interface {
+	CategoryList(ctx context.Context, in *CategoryListRequest, opts ...grpc.CallOption) (*CategoryListReply, error)
+	TagList(ctx context.Context, in *TagListRequest, opts ...grpc.CallOption) (*TagListReply, error)
+	List(ctx context.Context, in *ListRequest, opts ...grpc.CallOption) (*ListReply, error)
+}
+
+type articleClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewArticleClient(cc grpc.ClientConnInterface) ArticleClient {
+	return &articleClient{cc}
+}
+
+func (c *articleClient) CategoryList(ctx context.Context, in *CategoryListRequest, opts ...grpc.CallOption) (*CategoryListReply, error) {
+	out := new(CategoryListReply)
+	err := c.cc.Invoke(ctx, Article_CategoryList_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *articleClient) TagList(ctx context.Context, in *TagListRequest, opts ...grpc.CallOption) (*TagListReply, error) {
+	out := new(TagListReply)
+	err := c.cc.Invoke(ctx, Article_TagList_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *articleClient) List(ctx context.Context, in *ListRequest, opts ...grpc.CallOption) (*ListReply, error) {
+	out := new(ListReply)
+	err := c.cc.Invoke(ctx, Article_List_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// ArticleServer is the server API for Article service.
+// All implementations must embed UnimplementedArticleServer
+// for forward compatibility
+type ArticleServer interface {
+	CategoryList(context.Context, *CategoryListRequest) (*CategoryListReply, error)
+	TagList(context.Context, *TagListRequest) (*TagListReply, error)
+	List(context.Context, *ListRequest) (*ListReply, error)
+	mustEmbedUnimplementedArticleServer()
+}
+
+// UnimplementedArticleServer must be embedded to have forward compatible implementations.
+type UnimplementedArticleServer struct {
+}
+
+func (UnimplementedArticleServer) CategoryList(context.Context, *CategoryListRequest) (*CategoryListReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CategoryList not implemented")
+}
+func (UnimplementedArticleServer) TagList(context.Context, *TagListRequest) (*TagListReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method TagList not implemented")
+}
+func (UnimplementedArticleServer) List(context.Context, *ListRequest) (*ListReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method List not implemented")
+}
+func (UnimplementedArticleServer) mustEmbedUnimplementedArticleServer() {}
+
+// UnsafeArticleServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to ArticleServer will
+// result in compilation errors.
+type UnsafeArticleServer interface {
+	mustEmbedUnimplementedArticleServer()
+}
+
+func RegisterArticleServer(s grpc.ServiceRegistrar, srv ArticleServer) {
+	s.RegisterService(&Article_ServiceDesc, srv)
+}
+
+func _Article_CategoryList_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CategoryListRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ArticleServer).CategoryList(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Article_CategoryList_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ArticleServer).CategoryList(ctx, req.(*CategoryListRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Article_TagList_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(TagListRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ArticleServer).TagList(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Article_TagList_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ArticleServer).TagList(ctx, req.(*TagListRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Article_List_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ArticleServer).List(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Article_List_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ArticleServer).List(ctx, req.(*ListRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// Article_ServiceDesc is the grpc.ServiceDesc for Article service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var Article_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "api.kratosblog.server.v1.Article",
+	HandlerType: (*ArticleServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "CategoryList",
+			Handler:    _Article_CategoryList_Handler,
+		},
+		{
+			MethodName: "TagList",
+			Handler:    _Article_TagList_Handler,
+		},
+		{
+			MethodName: "List",
+			Handler:    _Article_List_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/kratosblog/server/v1/article.proto",
+}
