# api/kratosblog/server/v1/article_http.pb.go
@@ -1,0 +1,147 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.6.1
+// - protoc             v3.21.12
+// source: api/kratosblog/server/v1/article.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationArticleCategoryList = "/api.kratosblog.server.v1.Article/CategoryList"
+const OperationArticleList = "/api.kratosblog.server.v1.Article/List"
+const OperationArticleTagList = "/api.kratosblog.server.v1.Article/TagList"
+
+type ArticleHTTPServer interface {
+	CategoryList(context.Context, *CategoryListRequest) (*CategoryListReply, error)
+	List(context.Context, *ListRequest) (*ListReply, error)
+	TagList(context.Context, *TagListRequest) (*TagListReply, error)
+}
+
+func RegisterArticleHTTPServer(s *http.Server, srv ArticleHTTPServer) {
+	r := s.Route("/")
+	r.GET("/v1/articles/category", _Article_CategoryList0_HTTP_Handler(srv))
+	r.GET("/v1/articles/tag", _Article_TagList0_HTTP_Handler(srv))
+	r.GET("/v1/articles/list", _Article_List0_HTTP_Handler(srv))
+}
+
+func _Article_CategoryList0_HTTP_Handler(srv ArticleHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in CategoryListRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationArticleCategoryList)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.CategoryList(ctx, req.(*CategoryListRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*CategoryListReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Article_TagList0_HTTP_Handler(srv ArticleHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in TagListRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationArticleTagList)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.TagList(ctx, req.(*TagListRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*TagListReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Article_List0_HTTP_Handler(srv ArticleHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in ListRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationArticleList)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.List(ctx, req.(*ListRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*ListReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+type ArticleHTTPClient interface {
+	CategoryList(ctx context.Context, req *CategoryListRequest, opts ...http.CallOption) (rsp *CategoryListReply, err error)
+	List(ctx context.Context, req *ListRequest, opts ...http.CallOption) (rsp *ListReply, err error)
+	TagList(ctx context.Context, req *TagListRequest, opts ...http.CallOption) (rsp *TagListReply, err error)
+}
+
+type ArticleHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewArticleHTTPClient(client *http.Client) ArticleHTTPClient {
+	return &ArticleHTTPClientImpl{client}
+}
+
+func (c *ArticleHTTPClientImpl) CategoryList(ctx context.Context, in *CategoryListRequest, opts ...http.CallOption) (*CategoryListReply, error) {
+	var out CategoryListReply
+	pattern := "/v1/articles/category"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationArticleCategoryList))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *ArticleHTTPClientImpl) List(ctx context.Context, in *ListRequest, opts ...http.CallOption) (*ListReply, error) {
+	var out ListReply
+	pattern := "/v1/articles/list"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationArticleList))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *ArticleHTTPClientImpl) TagList(ctx context.Context, in *TagListRequest, opts ...http.CallOption) (*TagListReply, error) {
+	var out TagListReply
+	pattern := "/v1/articles/tag"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationArticleTagList))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
